<resources>
    <string name="app_name">araView Face</string>
    <string name="logo">logo</string>
    <string name="greeting">인사말</string>
    <string name="name">이름</string>
    <string name="birthdate">생년월일</string>
    <string name="birth_select">생년월일을 선택해주세요.</string>
    <string name="email">이메일</string>
    <string name="email_hint">youremail@lotte.net</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="pi_info">개인 정보 수집 및 얼굴 등록에 동의하시면 더 편리한 서비스를 만드는데 도움이 될거에요.</string>
    <string name="agree">동의함</string>
    <string name="protection_info">보기 ></string>
    <string name="submit">확인</string>

    <string name="pi_popup_title">개인정보 수집 동의</string>
    <string name="pi_popup_p">롯데정보통신은 얼굴 인식 솔루션 개발을 목적으로 사용자의 얼굴 사진, 전화 번호, 이메일주소를 수집하여 활용합니다.
        수집한 정보는 5년간 안전하게 보관하며, 이후에 일괄 삭제할 예정입니다. 동의하지 않을 경우 별도의 불이익은 없습니다.</string>
    <string name="close">닫기</string>

    <string name="ahead">정면을 봐주세요.</string>
    <string name="turn">얼굴을 360도 천천히 돌려주세요.</string>
    <string name="complete">완료되었습니다.</string>

    <string name="simulation_info">시뮬레이션화면안내</string>
    <string name="sim_check">시뮬레이션완료</string>

    <string name="cameara_custom">카메라화면이미지</string>
    <string name="three">3</string>
    <string name="finish_check">마지막페이지체크이미지</string>
    <string name="finish_info">최종완료안내</string>
</resources>
