<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="600dp"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/pi_popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pi_popup_title"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/pi_popup_p"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:text="@string/pi_popup_p"
        android:textSize="30sp" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#C721B3"
        android:onClick="mOnClose"
        android:text="@string/close"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>