<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaceCamera2">

    <TextureView
        android:id="@+id/cameraTextureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ImageView
        android:id="@+id/camera_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cameara_custom"
        app:srcCompat="@drawable/custom_camera" />

    <FrameLayout
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp">


        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="580dp"
            android:layout_height="580dp"
            android:layout_gravity="center"
            android:max="100"
            app:drawBackgroundOutsideProgress="true"
            app:line_count="30"
            app:line_width="4dp"
            app:progress_background_color="#C4C4C4"
            app:progress_end_color="@color/button"
            app:progress_shader="sweep"
            app:progress_start_color="@color/button"
            app:progress_stroke_cap="round"
            app:progress_stroke_width="15dp"
            app:style="solid_line" />

        <ImageView
            android:id="@+id/checkimg2"
            android:layout_width="580dp"
            android:layout_height="580dp"
            android:layout_gravity="center"
            android:contentDescription="@string/sim_check"
            android:src="@drawable/check" />

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="580dp"
            android:layout_height="580dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/three"
            android:textColor="#FFFFFF"
            android:textSize="350sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/ahead2"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_below="@id/camera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:padding="9dp"
        android:text="@string/ahead"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/turn2"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_below="@id/camera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:padding="9dp"
        android:text="@string/turn"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/complete2"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_below="@id/camera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:padding="9dp"
        android:text="@string/complete"
        android:textColor="#000000"
        android:textSize="28sp" />


    <Button
        android:id="@+id/camera_ok"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@id/complete2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="40dp"
        android:background="@color/button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


</RelativeLayout>