<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/ara_logo"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ara_logo" />

        <ImageView
            android:id="@+id/greetings"
            android:layout_width="497dp"
            android:layout_height="145dp"
            android:layout_below="@id/ara_logo"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/greeting"
            app:srcCompat="@drawable/greetings" />

        <LinearLayout
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/greetings"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="70dp"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:focusable="auto"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textSize="30sp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/birth_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_field"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/birthdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/birthdate"
                android:text="@string/birthdate"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ebirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="birthdate"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/birth_select"
                android:inputType="date"
                android:textSize="30sp"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/birth_field"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:ems="10"
                android:focusable="auto"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="30sp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_field"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/gender"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gender"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="30sp" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/pi_protect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_field"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:text="@string/pi_info"
            android:textColor="#000000"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/agree_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pi_protect"
            android:layout_marginStart="-350dp"
            android:layout_marginLeft="-350dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/pi_protect"
            android:layout_toRightOf="@id/pi_protect"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/agree"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/protection_info"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="@string/protection_info"
                android:textColor="#000000"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/next_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/agree_g"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="70dp"
            android:background="#B6B6B6"
            android:padding="20dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>