<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tool:context=".FinishActivity">

    <ImageView
        android:id="@+id/finish_check"
        android:layout_width="787dp"
        android:layout_height="166dp"
        android:layout_marginTop="230dp"
        android:contentDescription="@string/finish_check"
        app:srcCompat="@drawable/finish_check" />

    <ImageView
        android:id="@+id/finish_info"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_below="@id/finish_check"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/finish_info"
        app:srcCompat="@drawable/finish_info" />

    <Button
        android:id="@+id/finish_ok"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@id/finish_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/button"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold" />
</RelativeLayout>